Fix footer spacing

--- a/css/c.css
+++ b/css/c.css
@@ -96,6 +96,7 @@ button, .btn {
     border: 1px solid rgba(255, 122, 0, 1);
     cursor: pointer;
     transition: all 0.1s ease-in;
+    width: fit-content;
 }
 
 button:hover, .btn:hover {
